dark mode fix - ProductIconPicker bg color

--- a/features/products/products.scss
+++ b/features/products/products.scss
@@ -94,7 +94,7 @@
 
 .ProductIconPicker {
     height: 150px;
-    background-color: whitesmoke;
+    background-color: var(--c-bg-light);
     color: gray;
     display: flex;
     align-items: center;
